# pants-python-kcl

./: Dockerfile  README.md  pants.toml
build-support/: pyproject.toml
src/python/kcl-app/: BUILD  README.md  pyproject.toml
src/python/kcl-app/develop/: docker-compose.yml
src/python/kcl-app/kcl_app/: main.py
