[tool.poetry]
name = "kcl-app"
version = "0.1.0"
description = ""
authors = ["pecolynx <pecolynx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
amazon-kclpy = "^2.1.3"
python-json-logger = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
